err/monique.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/blinker'...
Listing './lib/python3.5/site-packages/blinker-1.4.egg-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/monique-1.3.egg-info'...
Listing './lib/python3.5/site-packages/monique_tables-1.1.egg-info'...
Listing './lib/python3.5/site-packages/mqe'...
Listing './lib/python3.5/site-packages/mqe/dao'...
Listing './lib/python3.5/site-packages/mqe/dao/cassandradb'...
Listing './lib/python3.5/site-packages/mqe/dao/sqlite3db'...
Compiling './lib/python3.5/site-packages/mqe/layouts.py'...
***   File "./lib/python3.5/site-packages/mqe/layouts.py", line 96
    key=lambda (tile_id, vo): tile_id.time))
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mqe/migrations'...
Compiling './lib/python3.5/site-packages/mqe/tilewidgets.py'...
***   File "./lib/python3.5/site-packages/mqe/tilewidgets.py", line 596
    rows_items.sort(key=lambda ((rid, dt), _): dt)
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mqe/tpcreator.py'...
***   File "./lib/python3.5/site-packages/mqe/tpcreator.py", line 103
    tpcreated_ids_tags.sort(key=lambda (tile_id, tags): layouts.TagsSortKey(tags))
                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mqetables'...
Compiling './lib/python3.5/site-packages/mqetables/asciiparsing.py'...
***   File "./lib/python3.5/site-packages/mqetables/asciiparsing.py", line 288
    lambda (hs, count): (-count,
           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mqetables/ext'...
Compiling './lib/python3.5/site-packages/mqetables/ext/csv.py'...
***   File "./lib/python3.5/site-packages/mqetables/ext/csv.py", line 54
    except TypeError, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mqetables/ext/test_csv.py'...
***   File "./lib/python3.5/site-packages/mqetables/ext/test_csv.py", line 982
    if test_support.verbose: print "*** skipping leakage tests ***"
                                                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mqetables/parseany.py'...
***   File "./lib/python3.5/site-packages/mqetables/parseany.py", line 305
    print json.dumps(d)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mqetables/util.py'...
***   File "./lib/python3.5/site-packages/mqetables/util.py", line 207
    for a, b in itertools.groupby(enumerate(i), lambda (x, y): y - x):
                                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/parsedatetime'...
Listing './lib/python3.5/site-packages/parsedatetime/pdt_locales'...
Listing './lib/python3.5/site-packages/parsedatetime-2.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.4.2.dist-info'...
Listing './lib/python3.5/site-packages/pytimeparse'...
Listing './lib/python3.5/site-packages/pytimeparse/tests'...
Listing './lib/python3.5/site-packages/pytimeparse-1.1.4.dist-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
